# tg_bot_strpo

./: .env.example  Makefile  README.adoc  pyproject.toml
bot/: bot.py  load.py
bot/config/: settings.py
bot/handlers/: __init__.py  example_handler.py
