[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Andrey Bodryagin <ABodryagin@alfabank.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.8.1"
aiogram = "^3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
